# Unity

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TESTING.md  TEST_SUMMARY.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_server.py
docs/: BEST_PRACTICES.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PRODUCTIVITY_TOOLS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  SECURITY.md  SETUP.md  TESTING.md  TEST_SUMMARY.md
src/: __init__.py  config.py  server.py
src/crawler/: __init__.py  unity_crawler.py
src/downloader/: __init__.py  local_crawler.py  unity_downloader.py
src/processor/: __init__.py  content_processor.py
src/scraper/: __init__.py  unity_scraper.py  utils.py
src/storage/: __init__.py  structured_store.py  vector_store.py
tests/: test_crawler.py  test_integration.py  test_processor.py  test_scraper.py  test_server.py  test_storage.py
